kube/kubeApi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api-container
        image: dima/product:0.0.11
        ports:
        - containerPort: 8000
        command: ["python"]
        args: ["main.py"]
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 30006
  type: NodePort
