kube/kubeClient.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client-container
        image: dima/client:0.0.11
        ports:
        - containerPort: 3000
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30007
  type: NodePort
