kube/kubeML.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-deployment
  labels:
    app: ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml
  template:
    metadata:
      labels:
        app: ml
    spec:
      containers:
      - name: ml-container
        image: dima/ml:0.0.3
        ports:
        - containerPort: 8001
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: ml-service
spec:
  selector:
    app: ml
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
  type: ClusterIP
