kube/kubeIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: "kubernetes.docker.internal"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:          
            name: kubernetes-dashboard
            port: 
              number: 443
